# nettrash-me

./: .editorconfig  .gitignore  README.md  nettrash.me.sln  nettrash.ru.sln  nginx.conf
frontend/: Cargo.toml  index.html  styles.css
frontend/assets/.well-known/: README.md  apple-app-site-association  assetlinks.json
frontend/assets/appstore/exchange/: privacy.html  support.html
frontend/assets/appstore/geo/: privacy.html  support.html
frontend/assets/appstore/md/: privacy.html  support.html
frontend/assets/appstore/scan/: privacy.html  support.html
frontend/assets/exchange/: README.md  msg.html
frontend/assets/exchange/.well-known/: apple-app-site-association
frontend/assets/play/exchange/: privacy.html  support.html
frontend/assets/play/geo/: README.md  privacy.html  support.html
frontend/assets/play/md/: README.md  privacy.html  support.html
frontend/assets/play/scan/: .gitignore  README.md  privacy.html
frontend/src/: main.rs  storage.rs
frontend/src/components/: converters.rs  encryption.rs  github_api.rs  home.rs  math.rs  mod.rs  nav_menu.rs  text.rs  time.rs  wordlist.rs
nettrash.me/: Program.cs  Startup.cs  nettrash.me.csproj  package-lock.json
nettrash.me/ClientApp/: README.md  angular.json  package-lock.json  package.json
nettrash.me/ClientApp/src/: index.html  styles.css
nettrash.me/ClientApp/src/app/: app.component.html  app.module.ts
nettrash.me/ClientApp/src/app/home/: home.component.css  home.component.html
nettrash.me/ClientApp/src/app/math/: math.component.ts
nettrash.me/ClientApp/src/app/nav-menu/: nav-menu.component.html
nettrash.me/ClientApp/src/app/text/: text.component.html  text.component.ts
nettrash.me/ClientApp/src/app/time/: time.component.ts
nettrash.me/Controllers/: HomeController.cs  MathController.cs  TextController.cs  TimeController.cs
nettrash.me/Controllers/Request/: Base64.cs  Hash.cs  Hex.cs  Regex.cs  Url.cs
nettrash.me/Controllers/Response/: Base64.cs  ClientInfo.cs  Guid.cs  Hash.cs  Hex.cs  Luhn.cs  Regex.cs  Unixtime.cs  Url.cs
nettrash.me/Pages/: Error.cshtml.cs  _ViewImports.cshtml
nettrash.me/Properties/: launchSettings.json
nettrash.ru/: Program.cs  Startup.cs  WeatherForecast.cs  nettrash.ru.csproj
nettrash.ru/ClientApp/: README.md  angular.json  package-lock.json  package.json
nettrash.ru/ClientApp/src/: index.html  styles.css
nettrash.ru/ClientApp/src/app/: app.module.ts
nettrash.ru/ClientApp/src/app/home/: home.component.html
nettrash.ru/ClientApp/src/app/math/: math.component.html
nettrash.ru/ClientApp/src/app/nav-menu/: nav-menu.component.html
nettrash.ru/Controllers/: MathController.cs  TextController.cs  TimeController.cs  WeatherForecastController.cs
nettrash.ru/Controllers/Request/: Base64.cs  Hash.cs  Hex.cs  Url.cs
nettrash.ru/Controllers/Response/: Base64.cs  Guid.cs  Hash.cs  Hex.cs  Luhn.cs  Unixtime.cs  Url.cs
nettrash.ru/Pages/: Error.cshtml.cs  _ViewImports.cshtml
nettrash.ru/Properties/: launchSettings.json
(+31 files in other folders)
