[package]
name = "nettrash-me-frontend"
version = "1.4.0"
edition = "2021"
authors = ["nettrash"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Navigator", "Geolocation", "Document",
    "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement",
    "HtmlElement", "Blob", "BlobPropertyBag",
    "Storage",
    "Crypto", "SubtleCrypto", "CryptoKey", "CryptoKeyPair",
    "Url",
] }
js-sys = "0.3"
gloo-net = { version = "0.5", features = ["http"] }
gloo-timers = "0.3"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
md5 = { version = "0.10", package = "md-5" }
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
regex = "1"
chrono = "0.4"
urlencoding = "2"
log = "0.4"
wasm-logger = "0.2"
aes = "0.8"
des = "0.8"
blowfish = "0.9"
twofish = "0.7"
cbc = { version = "0.1", features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
p256 = { version = "0.13", features = ["ecdsa", "ecdh", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh", "pem"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "pem"] }
elliptic-curve = { version = "0.13", features = ["ecdh", "sec1"] }
qrcode = "0.14"
datamatrix = "0.3"
barcoders = { version = "2", features = ["svg"] }
rxing = { version = "0.8", default-features = false, features = ["wasm_support", "encoding_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
jsonschema = { version = "0.29", default-features = false }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
hmac = "0.12"
meval = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
